--- a/web/galeria.html
+++ b/web/galeria.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>Torres del Paine - Galeria</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div>
@@ -21,7 +22,7 @@ and open the template in the editor.
             
             <table>
                 <tr>
-                <td><img height="300" src="media/imagenes/54-torres-del-paine-paisajes-flora-y-fauna-fantastico-sur-trekking-valle-frances-15.jpg" alt=""/></td>
+                    <td><img height="225" src="media/imagenes/54-torres-del-paine-paisajes-flora-y-fauna-fantastico-sur-trekking-valle-frances-15.jpg" alt=""/></td>
                 <td><img src="media/imagenes/589407.jpg" height="300" alt=""/></td>
             </tr>
             <tr>
