--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>El Parque Nacional Torres del Paine</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <table style="align-content: center; alignment-adjust: middle; align-self: center">
